Reset sources for azure-storage-common to the release version 12.14.3.